<resources>
    <string name="app_name">Moderb</string>
    <string name="your_personal_fitness_journey_begins">Your Personal Fitness Journey \n Begins</string>
    <string name="welcome_to">Welcome To</string>
    <string name="already_a_user">Already a user ?</string>
    <string name="continue_with_existing_account">continue with existing account</string>
    <string name="start">Start</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="tailored_workouts_and_nutrition_plans">Tailored Workouts and \n Nutrition Plans</string>
    <string name="description_tailored_workouts_and_nutrition_plans">Get ready for workouts and nutrition plans tailored just for you. Tell us your goals, preferences, and fitness level, and let our AI create a customized roadmap to success</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="real_time_guidance_and_progress_tracking">Real-Time Guidance and \n Progress Tracking</string>
...
